# balatro-solver

./: .gitignore  Cargo.toml  README.md  clippy.toml
.github/workflows/: main.yml
solver-cli/: Cargo.toml  README.md
solver-cli/src/: main.rs  stats.rs
solver-core/: Cargo.toml  README.md
solver-core/src/: lib.rs  prelude.rs  solver.rs
solver-core/src/solver/: cards.rs  cardset.rs  error.rs  hand_evaluator.rs  scorer.rs
